# PH-kmeans

./: PHKmeans.ipynb  README.md  project.ipynb  pyproject.toml
PD_subsample/: ApproxPH.py
src/: pd_pm_kmeans.py  synthetic_data_clustering.ipynb
src/data_utils/: vectorisation_methods.py
